// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`timelion vis toExpressionAst function should match basic snapshot 1`] = `
Object {
  "chain": Array [
    Object {
      "arguments": Object {
        "expression": Array [
          ".es(*)",
        ],
        "interval": Array [
          "auto",
        ],
      },
      "function": "timelion_vis",
      "type": "function",
    },
  ],
  "type": "expression",
}
`;

exports[`timelion vis toExpressionAst function should not escape single quotes 1`] = `
Object {
  "chain": Array [
    Object {
      "arguments": Object {
        "expression": Array [
          ".es(index=my*,timefield=\\"date\\",split='test field:3',metric='avg:value')",
        ],
        "interval": Array [
          "auto",
        ],
      },
      "function": "timelion_vis",
      "type": "function",
    },
  ],
  "type": "expression",
}
`;
